# chucknorrisapi

./: .pre-commit-config.yaml  .pylintrc  linter-report.txt  manage.py  pyproject.toml
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py
chucknorrisapi/: asgi.py  settings.py  urls.py  views.py  wsgi.py
chucknorrisapi/templates/chucknorrisapi/: index.html
escola/: admin.py  models.py  tests.py
escola/migrations/: 0001_initial.py  0002_artigo_autor_artigos.py  0003_submissao.py  0004_autor_submissoes.py  0005_autor_categoria.py  0006_alter_autor_options_alter_submissao_options_and_more.py
polls/: admin.py  models.py
polls/migrations/: 0001_initial.py
